# Wave

./: .gitignore  CMakeLists.txt  README.md  installer.iss  package.bat  package.sh
plugins/sample/: sample_plugin.c
src/: main.cpp
src/app/: App.cpp  App.h
src/art/: AlbumArt.cpp  AlbumArt.h
src/audio/: AudioCapture.cpp  AudioCapture.h  AudioSettings.h  Engine.cpp  Engine.h  Equalizer.cpp  Equalizer.h  WaveformCache.cpp  WaveformCache.h
src/core/: Log.cpp  Log.h
src/coverflow/: CoverFlow.cpp  CoverFlow.h
src/layout/: Layout.cpp  Layout.h
src/metadata/: Metadata.cpp  Metadata.h
src/platform/: Win32Helpers.cpp  Win32Helpers.h
src/playlist/: PlaylistManager.cpp  PlaylistManager.h
src/plugin/: PluginAPI.h  PluginHost.cpp  PluginHost.h  PluginTypes.h
src/resources/: resources.rc
src/settings/: Settings.cpp  Settings.h
src/theme/: Theme.cpp  Theme.h
src/ui/: Renderer.cpp  Renderer.h
src/visualizer/: Visualizer.cpp  Visualizer.h
src/window/: MainWindow.cpp  MainWindow.h
